# mom-adgen-team13

./: .gitignore  .pylintrc  README.md
ai-deploy/: Makefile  README.md  lambda_function.py  main.tf  reading_file.py  requirements.txt
bff-api/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
bff-api-old/: Makefile  README.md
bff-api-old/.github/workflows/: pre-merge.yml  release.yml
bff-api-old/db/migrations/: V1__create_initial_schema.sql
bff-api-old/db/scripts/init_db/: utils.py
bff-api-old/deploy/: main.tf  outputs.tf  variables.tf
bff-api-old/deploy/modules/api_gateway/: main.tf
bff-api-old/deploy/modules/lambda/: main.tf  outputs.tf  variables.tf
bff-api-old/lambda/: lambda_function.py  query.py
bff-api-old/lambda_layer/python/psycopg2/: __init__.py  _ipaddress.py  _json.py  _range.py  extensions.py  extras.py
bff-api-old/lambda_layer/python/psycopg2_binary-2.9.10.dist-info/: RECORD  WHEEL
bff-api/bff_api/: README.md  main.py  samconfig.toml  template.yaml
bff-api/bff_api/.aws-sam/: build.toml
bff-api/db/migrations/: V1__create_initial_schema.sql
bff-api/db/scripts/connection_test/: README.md  main.py
bff-api/db/scripts/init_db/: README.md  main.py  sample-data.csv  test.env  utils.py
bff-api/deploy/: main.tf  outputs.tf  variables.tf
bff-api/deploy/modules/api_gateway/: main.tf  outputs.tf  variables.tf
bff-api/deploy/modules/ec2-instance/: main.tf  variables.tf
bff-api/deploy/modules/lambda/: main.tf  variables.tf
bff-api/lambda/: lambda_function.py
chat-api/: Makefile  README.md  READMME.md  event_advert.py  pyproject.toml
data-utils/: Makefile  genres.py  pyproject.toml  unique_genres.txt
db/: Makefile  pyproject.toml
db/scripts/init_db/: init.py  utils.py
deploy/: Makefile
deploy/deployer-iam/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  vue-sound.d.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/: callback.vue  home.vue  login.vue  player.vue  user.vue  userInput.vue
