[tool.poetry]
name = "bbf-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@email.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11.0 || >3.11.0,<4.0.0"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
psycopg = "^3.2.4"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
