[tool.poetry]
name = "bff-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
psycopg = {extras = ["c"], version = "^3.2.5"}
loguru = "^0.7.3"
flask-cors = "^5.0.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
